# sandbox-api

./: .gitignore  README.md  pyproject.toml
config/: sandbox.toml
sandbox_api/: __init__.py  config.py  db.py  errors.py  main.py  schemas.py
sandbox_api/mcp/: __init__.py  protocol.py  remote.py  stdio.py
sandbox_api/runtime/: __init__.py  base.py  docker.py
sandbox_api/services/: __init__.py  path_guard.py  sandbox_manager.py  tool_call_service.py  tool_executor.py  workspace_limits.py
tests/: conftest.py  test_api.py  test_docker_runtime.py  test_mcp.py  test_mcp_remote.py
